tests/snapshots/integration_tests__example_residual.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron HighwayResidual(dim, f):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (gate_path, transform_path, skip_path)
    gate_path -> Linear#1(dim, dim)
    Linear#1(dim, dim) -> Sigmoid#2()
    Sigmoid#2() -> gate
    transform_path -> f
    f -> transformed

neuron PostNormResidual(f, dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (skip, transform)
    transform -> f
    f -> transformed

neuron PreNormResidual(f, dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (skip, transform)
    transform -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> f
    f -> transformed

neuron Residual(f):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  graph:
    in -> (skip, transform)
    transform -> f
    f -> transformed

neuron ResidualFFN(dim, expansion):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (skip, transform)
    transform -> Linear#3(dim, expansion)
    Linear#3(dim, expansion) -> GELU#4()
    GELU#4() -> Linear#5(expansion, dim)
    Linear#5(expansion, dim) -> transformed
