tests/snapshots/integration_tests__example_shape_simple_test.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SimpleTest:
  inputs:
    input: [*, 512]
  outputs:
    output: [*, 256]
  graph:
    in -> Linear#0(512, 256)
    Linear#0(512, 256) -> out

neuron TestForkAdd:
  inputs:
    input: [*, 512]
  outputs:
    output: [*, 512]
  graph:
    in -> Fork#1()
    Fork#1() -> (a, b)
    a -> Add#2()
    Add#2() -> temp
    b -> temp
    temp -> out
