tests/snapshots/integration_tests__example_stdlib_feedforward.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AdaptiveFFN:
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> match:
      [*, *, d] where (d < 512): Linear#21(d, (d * 8)) -> GELU#22() -> Linear#23((d * 8), d) -> out
      [*, *, d]: Linear#24(d, (d * 4)) -> GELU#25() -> Linear#26((d * 4), d) -> out

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron Dropout(rate):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,regularization/Dropout

neuron FFN(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Linear#0(dim, (dim * 4))
    Linear#0(dim, (dim * 4)) -> GELU#1()
    GELU#1() -> Linear#2((dim * 4), dim)
    Linear#2((dim * 4), dim) -> out

neuron FFNWithDropout(dim, dropout_rate):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Linear#6(dim, (dim * 4))
    Linear#6(dim, (dim * 4)) -> GELU#7()
    GELU#7() -> Dropout#8(dropout_rate)
    Dropout#8(dropout_rate) -> Linear#9((dim * 4), dim)
    Linear#9((dim * 4), dim) -> Dropout#10(dropout_rate)
    Dropout#10(dropout_rate) -> out

neuron FFNWithHidden(in_dim, hidden_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  graph:
    in -> Linear#3(in_dim, hidden_dim)
    Linear#3(in_dim, hidden_dim) -> GELU#4()
    GELU#4() -> Linear#5(hidden_dim, out_dim)
    Linear#5(hidden_dim, out_dim) -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron GatedFFN(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Fork#11()
    Fork#11() -> (gate_path, value_path)
    gate_path -> Linear#12(dim, (dim * 4))
    Linear#12(dim, (dim * 4)) -> SiLU#13()
    SiLU#13() -> gate
    value_path -> Linear#14(dim, (dim * 4))
    Linear#14(dim, (dim * 4)) -> value
    (gate, value) -> Multiply#15()
    Multiply#15() -> Linear#16((dim * 4), dim)
    Linear#16((dim * 4), dim) -> out

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  impl:
    Source: core,nn/Linear

neuron Multiply:
  inputs:
    a: [*shape]
    b: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Multiply

neuron SiLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/SiLU

neuron TransformerFFNBlock(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Fork#17()
    Fork#17() -> (main, skip)
    main -> LayerNorm#18(dim)
    LayerNorm#18(dim) -> FFN#19(dim)
    FFN#19(dim) -> processed
    (processed, skip) -> Add#20()
    Add#20() -> out
