tests/snapshots/integration_tests__example_stdlib_residual.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  impl:
    Source: core,nn/Linear

neuron MLP(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Linear#19(dim, (dim * 4))
    Linear#19(dim, (dim * 4)) -> GELU#20()
    GELU#20() -> Linear#21((dim * 4), dim)
    Linear#21((dim * 4), dim) -> out

neuron PostNormResidual(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#11(dim, (dim * 4))
    Linear#11(dim, (dim * 4)) -> GELU#12()
    GELU#12() -> Linear#13((dim * 4), dim)
    Linear#13((dim * 4), dim) -> processed
    (processed, skip) -> Add#14()
    Add#14() -> LayerNorm#15(dim)
    LayerNorm#15(dim) -> out

neuron PreNormResidual(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> LayerNorm#6(dim)
    LayerNorm#6(dim) -> Linear#7(dim, (dim * 4))
    Linear#7(dim, (dim * 4)) -> GELU#8()
    GELU#8() -> Linear#9((dim * 4), dim)
    Linear#9((dim * 4), dim) -> processed
    (processed, skip) -> Add#10()
    Add#10() -> out

neuron Residual(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#0(dim, (dim * 4))
    Linear#0(dim, (dim * 4)) -> GELU#1()
    GELU#1() -> Linear#2((dim * 4), dim)
    Linear#2((dim * 4), dim) -> processed
    (processed, skip) -> Add#3()
    Add#3() -> out

neuron ResidualMLP(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> MLP#4(dim)
    MLP#4(dim) -> processed
    (processed, skip) -> Add#5()
    Add#5() -> out

neuron StackedResiduals(dim, depth):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Residual#16(dim)
    Residual#16(dim) -> Residual#17(dim)
    Residual#17(dim) -> Residual#18(dim)
    Residual#18(dim) -> out
