tests/snapshots/integration_tests__example_stdlib_transformer_block.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron FFN(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> Linear#6(dim, (dim * 4))
    Linear#6(dim, (dim * 4)) -> GELU#7()
    GELU#7() -> Linear#8((dim * 4), dim)
    Linear#8((dim * 4), dim) -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  impl:
    Source: core,nn/Linear

neuron MultiHeadSelfAttention(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: core,attention/MultiHeadSelfAttention

neuron TransformerBlock(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> (attn_main, attn_skip)
    attn_main -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> MultiHeadSelfAttention#1(dim, num_heads)
    MultiHeadSelfAttention#1(dim, num_heads) -> attn_out
    (attn_out, attn_skip) -> Add#2()
    Add#2() -> attn_residual
    attn_residual -> (ffn_main, ffn_skip)
    ffn_main -> LayerNorm#3(dim)
    LayerNorm#3(dim) -> FFN#4(dim)
    FFN#4(dim) -> ffn_out
    (ffn_out, ffn_skip) -> Add#5()
    Add#5() -> out
